; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_router.c_mlxsw_sp_nexthop4_ipip_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_router.c_mlxsw_sp_nexthop4_ipip_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { i32 }
%struct.fib_nh = type { %struct.TYPE_2__*, %struct.net_device* }
%struct.TYPE_2__ = type { i64 }
%struct.net_device = type { i32 }

@RTN_UNICAST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlxsw_sp*, %struct.fib_nh*, i32*)* @mlxsw_sp_nexthop4_ipip_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlxsw_sp_nexthop4_ipip_type(%struct.mlxsw_sp* %0, %struct.fib_nh* %1, i32* %2) #0 {
  %4 = alloca %struct.mlxsw_sp*, align 8
  %5 = alloca %struct.fib_nh*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.net_device*, align 8
  store %struct.mlxsw_sp* %0, %struct.mlxsw_sp** %4, align 8
  store %struct.fib_nh* %1, %struct.fib_nh** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.fib_nh*, %struct.fib_nh** %5, align 8
  %9 = getelementptr inbounds %struct.fib_nh, %struct.fib_nh* %8, i32 0, i32 1
  %10 = load %struct.net_device*, %struct.net_device** %9, align 8
  store %struct.net_device* %10, %struct.net_device** %7, align 8
  %11 = load %struct.net_device*, %struct.net_device** %7, align 8
  %12 = icmp ne %struct.net_device* %11, null
  br i1 %12, label %13, label %27

13:                                               ; preds = %3
  %14 = load %struct.fib_nh*, %struct.fib_nh** %5, align 8
  %15 = getelementptr inbounds %struct.fib_nh, %struct.fib_nh* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @RTN_UNICAST, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %13
  %22 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %4, align 8
  %23 = load %struct.net_device*, %struct.net_device** %7, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i64 @mlxsw_sp_netdev_ipip_type(%struct.mlxsw_sp* %22, %struct.net_device* %23, i32* %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %21, %13, %3
  %28 = phi i1 [ false, %13 ], [ false, %3 ], [ %26, %21 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @mlxsw_sp_netdev_ipip_type(%struct.mlxsw_sp*, %struct.net_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
